[gd_scene load_steps=23 format=2]

[ext_resource path="res://AAI Case/BasicSceneTest.gd" type="Script" id=1]
[ext_resource path="res://AAI Case/scenes/AAI_Dialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://AAI Case/backgrounds/cross5mannyPNG.png" type="Texture" id=3]
[ext_resource path="res://AAI Case/scenes/ConfrontationBG.tscn" type="PackedScene" id=4]
[ext_resource path="res://AAI Case/characters/CW/CW.tscn" type="PackedScene" id=5]
[ext_resource path="res://AAI Case/characters/Luke/Luke.tscn" type="PackedScene" id=6]
[ext_resource path="res://AAI Case/scenes/AAButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://AAI Case/scenes/TestimonyButtons.tscn" type="PackedScene" id=8]
[ext_resource path="res://AAI Case/music/questioning_moderato.ogg" type="AudioStream" id=9]
[ext_resource path="res://bubble-takethat.png" type="Texture" id=10]
[ext_resource path="res://bubble-objection.png" type="Texture" id=11]
[ext_resource path="res://bubble-holdit.png" type="Texture" id=12]
[ext_resource path="res://AAI Case/evidence/EvidenceMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://AAI Case/Statement.tscn" type="PackedScene" id=14]
[ext_resource path="res://AAI Case/Testimony.gd" type="Script" id=15]
[ext_resource path="res://AAI Case/StatementIndicator.gd" type="Script" id=16]
[ext_resource path="res://AAI Case/styles/statementIndicatorSelected.tres" type="StyleBox" id=17]
[ext_resource path="res://AAI Case/styles/statementIndicatorUnselected.tres" type="StyleBox" id=18]

[sub_resource type="Animation" id=1]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "holdit"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( 2, 1 ), Vector2( -2, -1 ), Vector2( 0, 0 ), Vector2( -2, -1 ), Vector2( 0, 0 ), Vector2( -2, -2 ), Vector2( -2, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.68 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "objection"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( 2, 1 ), Vector2( -2, -1 ), Vector2( 0, 0 ), Vector2( -2, -1 ), Vector2( 0, 0 ), Vector2( -2, -2 ), Vector2( -2, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.68 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "takethat"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( 2, 1 ), Vector2( -2, -1 ), Vector2( 0, 0 ), Vector2( -2, -1 ), Vector2( 0, 0 ), Vector2( -2, -2 ), Vector2( -2, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.68 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[node name="Node2D" type="Node"]
script = ExtResource( 1 )

[node name="Testimony" type="Node" parent="."]
script = ExtResource( 15 )

[node name="Statement" parent="Testimony" instance=ExtResource( 14 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AAIDialogBox" parent="CanvasLayer" instance=ExtResource( 2 )]
margin_right = 256.0
margin_bottom = 192.0

[node name="Bubble" type="TextureRect" parent="CanvasLayer"]
visible = false
margin_right = 261.0
margin_bottom = 196.0
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Bubble"]
anims/RESET = SubResource( 1 )
anims/holdit = SubResource( 2 )
anims/objection = SubResource( 3 )
anims/takethat = SubResource( 4 )

[node name="StatementIndicator" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.109375
margin_left = 130.0
margin_top = 114.0
margin_right = 254.0
margin_bottom = 126.0
custom_constants/separation = 2
alignment = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": true
}
stylebox_selected = ExtResource( 17 )
stylebox_unselected = ExtResource( 18 )

[node name="0" type="Panel" parent="CanvasLayer/StatementIndicator"]
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
custom_styles/panel = ExtResource( 17 )

[node name="1" type="Panel" parent="CanvasLayer/StatementIndicator"]
margin_left = 14.0
margin_right = 26.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
custom_styles/panel = ExtResource( 18 )

[node name="2" type="Panel" parent="CanvasLayer/StatementIndicator"]
margin_left = 28.0
margin_right = 40.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
custom_styles/panel = ExtResource( 18 )

[node name="3" type="Panel" parent="CanvasLayer/StatementIndicator"]
margin_left = 42.0
margin_right = 54.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
custom_styles/panel = ExtResource( 18 )

[node name="4" type="Panel" parent="CanvasLayer/StatementIndicator"]
margin_left = 56.0
margin_right = 68.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
custom_styles/panel = ExtResource( 18 )

[node name="5" type="Panel" parent="CanvasLayer/StatementIndicator"]
margin_left = 70.0
margin_right = 82.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
custom_styles/panel = ExtResource( 18 )

[node name="6" type="Panel" parent="CanvasLayer/StatementIndicator"]
margin_left = 84.0
margin_right = 96.0
margin_bottom = 12.0
rect_min_size = Vector2( 12, 12 )
custom_styles/panel = ExtResource( 18 )

[node name="ConfrontationBG" parent="." instance=ExtResource( 4 )]
texture = ExtResource( 3 )

[node name="CW" parent="ConfrontationBG" instance=ExtResource( 5 )]
nametag = "Crystalwarrior"

[node name="Luke" parent="ConfrontationBG" instance=ExtResource( 6 )]
position = Vector2( 512, 0 )
nametag = "Luke"

[node name="AAButton" parent="." instance=ExtResource( 7 )]
visible = false
margin_top = 192.0
margin_bottom = 384.0

[node name="TestimonyButtons" parent="." instance=ExtResource( 8 )]
margin_top = 192.0
margin_bottom = 192.0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]

[node name="Evidence" parent="." instance=ExtResource( 13 )]
visible = false
margin_top = 192.0
margin_bottom = 192.0
